--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.5.1",
     "cors": "^2.8.5",
-    "expo": "~49.0.13",
+    "expo": "^49.0.16",
     "expo-status-bar": "~1.6.0",
+    "native-base": "^2.15.2",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": false
 }
