--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "expo": "^49.0.16",
     "expo-status-bar": "~1.6.0",
-    "native-base": "^2.15.2",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "0.72.6",
+    "react-bootstrap": "^2.9.1",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.5",
     "react-native-elements": "^3.4.3",
+    "react-native-table-component": "^1.2.2",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
