--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
     "react-native-elements": "^3.4.3",
+    "react-native-paper": "^5.11.1",
     "react-native-table-component": "^1.2.2",
     "react-native-web": "~0.19.6"
   },
